# plex-poiskkino-provider

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release-please.yml
deploy/: docker-compose.yml  poiskkino-provider.service
docs/: ARCHITECTURE.md  DEPLOY.md  RELEASING.md  openapi.poiskkino.json
src/poiskkino_provider/: __init__.py  __main__.py  app.py  cache.py  config.py  service.py
src/poiskkino_provider/matching/: __init__.py  matcher.py
src/poiskkino_provider/plex/: __init__.py  mapping.py  models.py  types.py
src/poiskkino_provider/poiskkino/: __init__.py  client.py  errors.py  models.py
src/poiskkino_provider/routes/: __init__.py  health.py  provider.py
tests/: conftest.py  support.py  test_app.py  test_cache.py  test_contract_openapi.py  test_mapping.py  test_matcher.py  test_plex_models.py  test_poiskkino_client.py  test_poiskkino_models.py  test_review_fixes.py  test_routes.py  test_service.py  test_types.py
tests/fixtures/: movie_by_id.json  movie_match_empty.json  movie_match_imdb.json  movie_no_externalid.json  search_10lives.json  season_s1.json  show_by_id.json
