[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "poiskkino-provider"
version = "0.3.1"
description = "Plex Custom Metadata Provider that adds Kinopoisk (Кинопоиск) ratings, posters and descriptions via the PoiskKino API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Pavel Sokolov", email = "ps@sokolov.me" }]
keywords = ["plex", "kinopoisk", "metadata", "provider", "poiskkino"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: FastAPI",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastapi>=0.138,<1",
    "uvicorn[standard]>=0.49,<1",
    "httpx>=0.28,<1",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7,<8",
    "respx>=0.23,<1",
    "ruff>=0.15,<1",
    "mypy>=2.1,<3",
    "pre-commit>=4,<5",
]

[project.urls]
Homepage = "https://github.com/hacker-cb/plex-poiskkino-provider"
Repository = "https://github.com/hacker-cb/plex-poiskkino-provider"
Issues = "https://github.com/hacker-cb/plex-poiskkino-provider/issues"

[project.scripts]
poiskkino-provider = "poiskkino_provider.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/poiskkino_provider"]

[tool.hatch.build.targets.sdist]
include = ["src", "tests", "docs", "deploy", "README.md", "CHANGELOG.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Ruff (lint + format)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "N",        # pep8-naming
    "UP",       # pyupgrade
    "B",        # flake8-bugbear
    "C4",       # flake8-comprehensions
    "SIM",      # flake8-simplify
    "RUF",      # ruff-specific
    "PL",       # pylint
    "PT",       # flake8-pytest-style
]
ignore = [
    "PLR0913",  # too many arguments (config/mapping functions are wide by nature)
    "PLR2004",  # magic value comparisons are fine in tests
]

[tool.ruff.lint.per-file-ignores]
# Tests favour compact compound asserts; magic values are expected.
"tests/**" = ["PLR2004", "S101", "PT018"]

[tool.ruff.lint.pydocstyle]
convention = "google"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["respx.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Tests use pytest fixtures (monkeypatch, caplog) and dynamic JSON; relax strictness.
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false

# ---------------------------------------------------------------------------
# pytest + coverage
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers --cov=poiskkino_provider --cov-report=term-missing --cov-fail-under=85"
markers = [
    "integration: tests that hit a live PoiskKino API or Plex server (skipped unless env is set)",
]

[tool.coverage.run]
branch = true
source = ["poiskkino_provider"]
omit = ["*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
